# FAVM-87

./: .gitignore  CMakeLists.txt  README.md  main.c
bytecode/: bytecode.c  bytecode.h  instruction.h
interpreter/: interpreter.c  interpreter.h  interpreter_macros.h  onef_builtins.c  onef_builtins.h  onef_stdlib.c  onef_stdlib.h
